Add initial db API

--- a/DatabaseServer/App.config
+++ b/DatabaseServer/App.config
@@ -10,5 +10,13 @@
       <add key="BUFFER" value="1024"/>
       <add key="STOPMSG" value="Server stoped."/>
       <add key="TIMEOUT" value="10000"/>
+      
+      <add key="CREATEDB" value="CRT DB"/>
+      <add key="CREATETABLE" value="CRT TB"/>
+      <add key="DROPTABLE" value="DRP DB"/>
+      <add key="DROPTABLE" value="DRP TB"/>
+      <add key="USEDB" value="USE DB"/>
+
+      <add key="CONTENT" value="Content"/>
     </appSettings>
 </configuration>
