Added ability to create structure of tables in DB.

--- a/DatabaseApi/DatabaseApi.csproj
+++ b/DatabaseApi/DatabaseApi.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DbApi.cs" />
     <Compile Include="IDbApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableColumn.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\info.txt">
