--- a/DatabaseServer/App.config
+++ b/DatabaseServer/App.config
@@ -17,6 +17,8 @@
       <add key="DROPTABLE" value="DRP TB"/>
       <add key="USEDB" value="USE DB"/>
 
+      <add key="TABLECONTENT" value="TableContent"/>
+      <add key="TABLEMETA" value="TableStructure"/>
       <add key="CONTENT" value="Content"/>
     </appSettings>
 </configuration>
