Added type parser to DB-API

--- a/DatabaseServer/App.config
+++ b/DatabaseServer/App.config
@@ -20,5 +20,10 @@
       <add key="TABLECONTENT" value="TableContent"/>
       <add key="TABLEMETA" value="TableStructure"/>
       <add key="CONTENT" value="Content"/>
+
+      <add key="INTEGER" value="INT"/>
+      <add key="STRING" value="STR"/>
+      <add key="DOUBLE" value="DOUB"/>
+      
     </appSettings>
 </configuration>
