Added initial get- and inser- content methods to DbAPI.

--- a/DatabaseServer/App.config
+++ b/DatabaseServer/App.config
@@ -8,18 +8,22 @@
       <add key="PORT" value="11000"/>
       <add key="BACKLOG" value="10"/>
       <add key="BUFFER" value="1024"/>
-      <add key="STOPMSG" value="Server stoped."/>
+      <add key="STOP_MSG" value="Server stoped."/>
       <add key="TIMEOUT" value="10000"/>
       
-      <add key="CREATEDB" value="CRT DB"/>
-      <add key="CREATETABLE" value="CRT TB"/>
-      <add key="DROPTABLE" value="DRP DB"/>
-      <add key="DROPTABLE" value="DRP TB"/>
-      <add key="USEDB" value="USE DB"/>
+      <add key="CREATE_DB" value="CRT DB"/>
+      <add key="DROP_DB" value="DRP DB"/>
+      <add key="USE_DB" value="USE DB"/>
+      <add key="CREATE_TABLE" value="CRT TB"/>
+      <add key="DROP_TABLE" value="DRP TB"/>
+      <add key="INSERT_CONTENT" value="INS TB"/>
+      <add key="GET_CONTENT" value="GET TB"/>
 
-      <add key="TABLECONTENT" value="TableContent"/>
-      <add key="TABLEMETA" value="TableStructure"/>
-      <add key="CONTENT" value="Content"/>
+      <add key="OK_MSG" value="*** DONE ***"/>
+
+      <add key="TABLE_CONTENT" value="TableContent"/>
+      <add key="TABLE_META" value="TableStructure"/>
+      <add key="CONTENT_FOLDER" value="Content"/>
 
       <add key="INTEGER" value="INT"/>
       <add key="STRING" value="STR"/>
