--- a/TestClient/App.config
+++ b/TestClient/App.config
@@ -7,5 +7,9 @@
     <add key="HOST" value="localhost"/>
     <add key="PORT" value="11000"/>
     <add key="BUFFER" value="1024"/>
+
+    <add key="INTEGER" value="INT"/>
+    <add key="STRING" value="STR"/>
+    <add key="DOUBLE" value="DOUB"/>
   </appSettings>
 </configuration>
